# form-bot

./: .env.example  .gitignore  Dockerfile  Makefile  pyproject.toml
src/: config.py  main.py
src/formbot/: __init__.py  app.py
src/formbot/bot/: __init__.py  bot.py  init_handler.py
src/formbot/bot/forms/y2024/fifth_year_form/: __init__.py  form_handler.py  form_resources.py  form_service.py  form_states.py
src/formbot/bot/forms/y2024/third_year_form/: __init__.py  form_handler.py  form_resources.py  form_service.py  form_states.py
src/formbot/bot/utils/: __init__.py  bot_state.py  generic_helpers.py  handler.py  keyboards.py  logger.py
src/formbot/bot/utils/filters/: is_email_filter.py  is_phone_number_filter.py
src/formbot/storage/: __init__.py  sqlitedb.py
tests/formbot/bot/utils/: generic_helpers_test.py
